--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
   
   <!--  全局变量配置-->
   <properties> 
-    <spring.version>4.1.6.RELEASE</spring.version> 
+    <spring.version>[4.3.17,)</spring.version> 
   </properties>
   
   <dependencies>
@@ -109,12 +109,13 @@
       <version>2.1.0</version> 
     </dependency> 
     
-    <!-- jackson-databind --> 
-    <dependency> 
-      <groupId>com.fasterxml.jackson.core</groupId>  
-      <artifactId>jackson-databind</artifactId>  
-      <version>2.1.0</version> 
-    </dependency>
+    <!-- jackson-databind Upgrade com.fasterxml.jackson.core:jackson-databind to version 2.8.11.1 or later.--> 
+    <dependency>
+	  <groupId>com.fasterxml.jackson.core</groupId>
+	  <artifactId>jackson-databind</artifactId>
+	  <version>[2.8.11.1,)</version>
+	</dependency>
+
     
     <!-- jackson-annotations -->  
     <dependency> 
